fix section nav bug preventing menu toggle when only one item, fix header overlay position with section menu that overflows to second line with slim-header. line up section menu with section title. make menu text smaller when section nav is collapsed.

--- a/scss/components/cards/header-card-overlay.scss
+++ b/scss/components/cards/header-card-overlay.scss
@@ -50,6 +50,10 @@
 
     }
 
+    .form-group{
+        margin-bottom: 0;
+    }
+
     @include media-breakpoint-up(md) {
 
         margin-top: -7rem;
@@ -77,6 +81,10 @@
             left: 0;
             right: 0;
             padding: 1.5rem 2rem 1rem 2rem
+        }
+
+        .form-group{
+            margin-bottom: 1rem;
         }
 
     }
@@ -109,11 +117,19 @@
 
 
 .show-departmental-menu {
-    @include media-breakpoint-up(md) {
-        .card.header-card-overlay {
-            margin-top: -8rem;
+
+
+        @include media-breakpoint-up(md) {
+            .card.header-card-overlay {
+                margin-top: -8rem;
+            }
+            &.slim-header {
+                .card.header-card-overlay {
+                    margin-top: calc(-8rem + #{1px});
+                }
+            }
         }
-    }
+
 }
 
 .global-header-transparent .header-card-overlay {
